@@ -32,21 +32,53 @@ import java.util.*;
    See the License for the specific language governing permissions and
    limitations under the License.
 */
-
 public class Farming extends GatheringSkill
 {
-	@Override public String ID() { return "Farming"; }
-	private final static String localizedName = CMLib.lang().L("Farming");
-	@Override public String name() { return localizedName; }
-	private static final String[] triggerStrings =I(new String[] {"PLANT","FARM","FARMING"});
-	@Override public String[] triggerStrings(){return triggerStrings;}
-	@Override public int classificationCode(){return Ability.ACODE_COMMON_SKILL|Ability.DOMAIN_GATHERINGSKILL;}
-	@Override protected boolean allowedWhileMounted(){return false;}
-	@Override public String supportedResourceString(){return "VEGETATION|COTTON|HEMP|WOODEN";}
+	@Override
+	public String ID()
+	{
+		return "Farming";
+	}
 
-	protected Item found=null;
-	protected Room room=null;
-	protected String foundShortName="";
+	private final static String localizedName = CMLib.lang().L("Farming");
+
+	@Override
+	public String name()
+	{
+		return localizedName;
+	}
+
+	private static final String[] triggerStrings = I(new String[] { "PLANT", "FARM", "FARMING" });
+
+	@Override
+	public String[] triggerStrings()
+	{
+		return triggerStrings;
+	}
+
+	@Override
+	public int classificationCode()
+	{
+		return Ability.ACODE_COMMON_SKILL | Ability.DOMAIN_GATHERINGSKILL;
+	}
+
+	@Override
+	protected boolean allowedWhileMounted()
+	{
+		return false;
+	}
+
+	@Override
+	public String supportedResourceString()
+	{
+		return "VEGETATION|COTTON|HEMP|WOODEN";
+	}
+
+	protected Item		found			= null;
+	protected Room		room			= null;
+	protected String	foundShortName	= "";
+
+	
 	public Farming()
 	{
 		super();
@@ -58,7 +90,12 @@ public class Farming extends GatheringSkill
 	{
 		return getDuration(45,mob,level,15);
 	}
-	@Override protected int baseYield() { return 1; }
+
+	@Override
+	protected int baseYield()
+	{
+		return 1;
+	}
 
 	@Override
 	public boolean tick(Tickable ticking, int tickID)
