@@ -540,7 +540,8 @@ Example  : plant bundle 10 berries\n\r\
 This skill allows the player to plant a resource into the ground.  The player \
 must place a sample of the resource on the ground first to use as seed.  After \
 planting is completed, the resource will be ready to harvest some time later, \
-after the plants have grown. \
+after the plants have grown. There will be no need to forage them, as the new crop \
+will simply appear in the fields.\
 You can also bundle multiple resources together using this skill.  The GET command \
 can be used to unbundle such resources.
 
