@@ -27,6 +27,7 @@
   26. MORGUE/DEATH/BODY/START rooms support levels and masks now.
   27. The Swim skill, when used as a racial ability, does not have a usage cost any more.
   28. Lassos and Nets no longer do physical damage
+  29. CMCLAS field in CMCHAR table expanded to 250 chars. This presents an optional-only upgrade!
   
 # Build 5.9.3 Released 05/08/2016
    1. Follower behavior now has a few more options.
